// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`frozen board API key vocabulary and presets > freezes all three ordered preset expansions 1`] = `
{
  "company_automation": {
    "instanceCapabilities": [],
    "name": "Company automation",
    "permissions": [
      "companies:read",
      "agents:read",
      "projects:read",
      "issues:read",
      "goals:read",
      "routines:read",
      "approvals:read",
      "costs:read",
      "activity:read",
      "artifacts:read",
      "workspaces:read",
      "skills:read",
      "tools:read",
      "members:read",
      "decisions:read",
      "settings:read",
      "environments:read",
      "pipelines:read",
      "search:read",
      "runtime:read",
      "audit:read",
      "companies:write",
      "agents:write",
      "agents:operate",
      "projects:write",
      "issues:write",
      "issues:control",
      "goals:write",
      "routines:write",
      "routines:run",
      "approvals:write",
      "costs:write",
      "artifacts:write",
      "workspaces:manage",
      "skills:manage",
      "tools:manage",
      "secrets:read_metadata",
      "secrets:manage",
      "decisions:write",
      "settings:write",
      "environments:manage",
      "pipelines:write",
      "runtime:manage",
      "board_api_keys:revoke_self",
    ],
  },
  "full_instance_admin": {
    "helperText": "Grants instance-global actions; company data still requires pinned companies.",
    "instanceCapabilities": [
      "instance_admin",
    ],
    "name": "Full instance admin",
    "permissions": [
      "companies:read",
      "companies:write",
      "agents:read",
      "agents:write",
      "agents:operate",
      "projects:read",
      "projects:write",
      "issues:read",
      "issues:write",
      "issues:control",
      "goals:read",
      "goals:write",
      "routines:read",
      "routines:write",
      "routines:run",
      "approvals:read",
      "approvals:write",
      "approvals:decide",
      "costs:read",
      "costs:write",
      "activity:read",
      "artifacts:read",
      "artifacts:write",
      "workspaces:read",
      "workspaces:manage",
      "skills:read",
      "skills:manage",
      "tools:read",
      "tools:manage",
      "secrets:read_metadata",
      "secrets:manage",
      "members:read",
      "members:manage",
      "decisions:read",
      "decisions:write",
      "settings:read",
      "settings:write",
      "environments:read",
      "environments:manage",
      "pipelines:read",
      "pipelines:write",
      "search:read",
      "runtime:read",
      "runtime:manage",
      "audit:read",
      "instance:read",
      "instance:manage",
      "companies:create",
      "companies:import_export",
      "plugins:read",
      "plugins:manage",
      "adapters:read",
      "adapters:manage",
      "users:read",
      "users:manage",
      "catalogs:read",
      "catalogs:manage",
      "backups:create",
      "board_api_keys:revoke_self",
    ],
  },
  "read_only": {
    "instanceCapabilities": [],
    "name": "Read-only (company-pinned)",
    "permissions": [
      "companies:read",
      "agents:read",
      "projects:read",
      "issues:read",
      "goals:read",
      "routines:read",
      "approvals:read",
      "costs:read",
      "activity:read",
      "artifacts:read",
      "workspaces:read",
      "skills:read",
      "tools:read",
      "members:read",
      "decisions:read",
      "settings:read",
      "environments:read",
      "pipelines:read",
      "search:read",
      "runtime:read",
      "audit:read",
    ],
  },
}
`;

exports[`frozen board API key vocabulary and presets > freezes the canonical 59 permission keys in numeric order 1`] = `
[
  "companies:read",
  "companies:write",
  "agents:read",
  "agents:write",
  "agents:operate",
  "projects:read",
  "projects:write",
  "issues:read",
  "issues:write",
  "issues:control",
  "goals:read",
  "goals:write",
  "routines:read",
  "routines:write",
  "routines:run",
  "approvals:read",
  "approvals:write",
  "approvals:decide",
  "costs:read",
  "costs:write",
  "activity:read",
  "artifacts:read",
  "artifacts:write",
  "workspaces:read",
  "workspaces:manage",
  "skills:read",
  "skills:manage",
  "tools:read",
  "tools:manage",
  "secrets:read_metadata",
  "secrets:manage",
  "members:read",
  "members:manage",
  "decisions:read",
  "decisions:write",
  "settings:read",
  "settings:write",
  "environments:read",
  "environments:manage",
  "pipelines:read",
  "pipelines:write",
  "search:read",
  "runtime:read",
  "runtime:manage",
  "audit:read",
  "instance:read",
  "instance:manage",
  "companies:create",
  "companies:import_export",
  "plugins:read",
  "plugins:manage",
  "adapters:read",
  "adapters:manage",
  "users:read",
  "users:manage",
  "catalogs:read",
  "catalogs:manage",
  "backups:create",
  "board_api_keys:revoke_self",
]
`;
